@@ -2,7 +2,7 @@
  *  This file is part of the KDE libraries
  *  Copyright (c) 2001 Michael Goffioul <goffioul@imec.be>
  *
- *  $Id:  $
+ *  $Id$
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Library General Public
@@ -56,6 +56,7 @@ protected slots:
 
 signals:
 	void dbLoaded(bool reloaded);
+	void error(const QString&);
 
 private:
 	KMDBCreator			*m_creator;
